--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -10,5 +10,7 @@ edition = "2021"
 console_error_panic_hook = "0"
 wasm-bindgen = "0"
 wee_alloc = "0"
+log = "0"
+wasm-logger = "0"
 yew = "0"
 yew-router = "0"
