--- a/web/Cargo.toml
+++ b/web/Cargo.toml
@@ -22,3 +22,4 @@ arc-swap = { version = "*" }
 once_cell = { version = "*" }
 time = { version = "*" }
 web-derive = { path = "./web-derive" }
+thiserror = { version = "*" }
