--- a/web/Cargo.toml
+++ b/web/Cargo.toml
@@ -7,20 +7,19 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "*"
-poem = "*"
-poem-openapi = { version = "1", features = ["swagger-ui"] }
-tokio = { version = "*", features = ["macros", "rt-multi-thread", "signal"] }
-tokio-stream = { version = "*" }
-sqlx = { version = "*", features = ["mysql", "runtime-tokio-rustls", "time", "bigdecimal"] }
-tracing = { version = "*" }
-tracing-subscriber = { version = "*", features = ["local-time"] }
-tracing-appender = { version = "*" }
+anyhow = { version = "*" }
+arc-swap = { version = "*" }
+bigdecimal = { version = "*" }
+once_cell = { version = "*" }
+poem = { version = "*" }
+poem-openapi = { version = "*", features = ["swagger-ui"] }
 serde = { version = "*", features = ["derive"] }
 serde_json = { version = "*" }
-arc-swap = { version = "*" }
-once_cell = { version = "*" }
-time = { version = "*" }
-web-derive = { path = "./web-derive" }
+sqlx = { version = "*", features = ["mysql", "runtime-tokio-rustls", "time", "bigdecimal"] }
 thiserror = { version = "*" }
-bigdecimal = { version = "*" }
+time = { version = "*" }
+tokio = { version = "*", features = ["macros", "rt-multi-thread", "signal"] }
+tokio-stream = { version = "*" }
+tracing = { version = "*" }
+tracing-appender = { version = "*" }
+tracing-subscriber = { version = "*", features = ["local-time"] }
