--- a/web/Cargo.toml
+++ b/web/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2018"
 anyhow = { version = "*" }
 arc-swap = { version = "*" }
 bigdecimal = { version = "*" }
+toml = { version = "*" }
 once_cell = { version = "*" }
 poem = { version = "*" }
 poem-openapi = { version = "*", features = ["swagger-ui"] }
